--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,4 @@
-image: Ubuntu  # образ для сборки
+image: Ubuntu
 
 stack: jdk 11
 
@@ -9,8 +9,8 @@ branches:
 build: off
 
 install:
-  - chmod +x gradlew
   - java -jar ./artifacts/app-card-delivery.jar &
 
 build_script:
+  - chmod +x gradlew
   - ./gradlew test --info -Dselenide.headless=true
